<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pibot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tranxuanmanh128@gmail.com">manh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>pibot_controller</exec_depend>
  <exec_depend>pibot_localization</exec_depend>
  <exec_depend>pibot_mappping</exec_depend>
  <exec_depend>pibot_description</exec_depend>
  <exec_depend>laptopbot_firmware</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
